# Repair-Data-Finder

./: .gitignore  MOXA_Schematic_Finder_v1.4.spec  main.py  moxa_schematic_finder_v1.3.py  moxa_schematic_finder_v1.4.py  push_to_github.bat  pyproject.toml  repair_data_finder_v1.0.py  run.bat  啟動.bat
.claude/: settings.local.json
