[project]
name = "repair-data-finder"
version = "1.0.0"
description = "MOXA Repair Data Finder - PDM & GeDCC automation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.19.0",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
    "keyring>=25.0.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
]
